Codeschool Project Portfolio Build
Completed work for the Build section of the HTMLPortfolioProject

--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+	<header>
+		<h1>Kristen Myers</h1>
+		<h2>User Experience Designer</h2>
+	</header>
+	<div class="tagline">
+		<h3>Learn More About Me</h3>
+		<p>My curiousity and passion for learning has driven me to continually grow and evolve. My background in education taught me how to present information, collaborate, and accommodate different personalities and learning styles. I continued my evolution by studying graphic design, and fell in love with understanding the user experience.</p>
+	</div>
+	<div class="skills">
+		<h3>My Skills</h3>
+		<p>I enjoy the diversity of web design, from user research to user interface design to building the code</p>
+		<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Adobe Design Software</li>
+		</ul>
+	</div>
+	<div class="contact">
+		<h3>Contact Me</h3>
+		<p>There are so many ways to communicate using modern technology. You can find me on <a href="www.twitter.com/cnn">Twitter</a></p>
+	</div>
 </body>
 </html>
