--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-	<header>
+	<div class="header">
 		<h1>Kristen Myers</h1>
 		<h2>User Experience Designer</h2>
-	</header>
+	</div>
 	<div class="tagline">
 		<h3>Learn More About Me</h3>
 		<p>My curiousity and passion for learning has driven me to continually grow and evolve. My background in education taught me how to present information, collaborate, and accommodate different personalities and learning styles. I continued my evolution by studying graphic design, and fell in love with understanding the user experience.</p>
